Bug 80902 - DOCX : Paragraph spacing is not preserved
Summary: DOCX : Paragraph spacing is not preserved
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Priyanka Gaikwad
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-04 07:41 UTC by Priyanka Gaikwad
Modified: 2024-09-09 17:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original Docx (18.02 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-07-04 07:41 UTC, Priyanka Gaikwad
Details
Screenshot (308.78 KB, image/png)
2014-07-04 07:42 UTC, Priyanka Gaikwad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Priyanka Gaikwad 2014-07-04 07:41:35 UTC
Created attachment 102248 [details]
Original Docx

Paragraph spacing is not preserved in docx.There is visual discrepancy in original docx and RT docx.

Steps to reproduce:
1] Open attached file in LO
2] Perform save_as
3] Open saved file in MS Office 2010

Current behavior :
Paragraph spacing is not preserved.

Expected behavior :
Paragraph spacing should get preserved after RT.There should not be any visual discrepancy in original docx and RT docx.
Comment 1 Priyanka Gaikwad 2014-07-04 07:42:29 UTC
Created attachment 102249 [details]
Screenshot
Comment 2 Jorendc 2014-07-04 07:53:46 UTC
Synerzip bugs -> NEW :-)
Comment 3 Commit Notification 2014-07-21 15:33:19 UTC
PriyankaGaikwad committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e71604ebde7092dc026521fc5a414686777cb38

fdo#80902: Document grid type is not rendered properly



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.