fdo#80902: Document grid type is not rendered properly

XML difference :
In document.xml
Original :
  <w:docGrid w:type="lines" w:linePitch="360"/>
Roundtrip :
  <w:docGrid w:type="default" w:linePitch="360" w:charSpace="0"/>

Document grid type is not set properly while import.

Change-Id: I68ec778c3138b37ad96f69942361a73ed0e85d71